Refactor authentication that uses email as user's identify
To achieve this goal, following changes are made.

- remove field username and fullname
- add new column displayName and make it unique
- make necessary changes to features and all tests

--- a/views/application.jade
+++ b/views/application.jade
@@ -29,7 +29,7 @@ block content
 block append scripts
   script(type="text/javascript").
     window.cantas = window.cantas || {};
-    cantas.user = {id: "#{user._id}", username: "#{user.username}"};
+    cantas.user = {id: "#{user._id}", displayName: "#{user.displayName}", email: "#{user.email}"};
     cantas.settings = !{settings}
 
   //- templates for backbone view
