--- a/views/backbone/accountSettings.jade
+++ b/views/backbone/accountSettings.jade
@@ -4,7 +4,5 @@ script#template-account-settings-view(type="text/template")
   |div.settings-container
   |  form(role="form")
   |    div.form-group
-  |      label.control-label Username
-  |        input#userName(type="text", value=username)
-  |      label.control-label Password
-  |        input#userPassword(type="password", placeholder="Password")
+  |      label.control-label Display Name
+  |        input#displayName(type="text", value=displayName)
