--- a/views/backbone/board-list.jade
+++ b/views/backbone/board-list.jade
@@ -14,7 +14,7 @@ script#template-board-list-view(type="text/template")
   |        div.owner.board-name= board.title
   |        div.board-meta
   |          span= cantas.utils.formatDate(board.created)
-  |          span= board.creatorId.username
+  |          span= board.creatorId.displayName
   |        if isCreator(board)
   |          a.js-open-board.reopen.board-list-status(data-board= board._id, title="Open this board")
   |    else
@@ -22,6 +22,6 @@ script#template-board-list-view(type="text/template")
   |        a.owner.board-name.js-view-board(href="/board/\#{board._id}")= board.title
   |        div.board-meta
   |          span= cantas.utils.formatDate(board.created)
-  |          span= board.creatorId.username
+  |          span= board.creatorId.displayName
   |        if isCreator(board)
   |          a.js-close-board.delete.board-list-status(data-board= board._id, title="Close this board")
