--- a/views/email/notification.jade
+++ b/views/email/notification.jade
@@ -29,7 +29,7 @@ html
       div.mail-label
       div.mail-card
         block content
-          h4 Hi #{username},
+          h4 Hi #{displayName},
           p !{message}
           p Regards,
           p Cantas
